fix(project): config logic project